--- a/peuters-natuurlijk/index.html
+++ b/peuters-natuurlijk/index.html
@@ -5,6 +5,7 @@
 <meta name="description" content="Stichting Voelspriet bedenkt, initieert en produceert avonturen. De inspiratie voor onze avonturen komt uit maatschappelijk thema&#39;s zoals: natuur &amp; milieu, duurzaamheid, cultuur en actuele onderwerpen. Vakinhoudelijke kennis en jaren ervaring als projectmanager worden In Stichting Voelspriet gecombineerd met creativiteit en een flinke dosis nieuwsgierigheid.">
 <meta name="keywords" content="natuur, milieu, duurzaamheid, cultuur, actueel onderwerp, avontuur, educatie, interactief, kunst">
 <meta name="viewport" content="initial-scale=1, width=device-width, height=device-height">
+<meta name="theme-color" content="#008db1">
 <link rel="shortcut icon" href="/favicon.ico">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,400italic">
 <script src="https://kit.fontawesome.com/9d00d7c14d.js" crossorigin="anonymous"></script><link rel="stylesheet" href="/scss/style.min.c82af2b2f7240aa6dd63de3c5159f7deeb8660ef739f4f6f9aa6dfe41480b3e6.css" integrity="sha256-yCrysvckCqbdY948UVn33uuGYO9zn09vmqbf5BSAs&#43;Y=" media="screen">
@@ -187,5 +188,6 @@ Aanmelden voor de workshops kan door te klikken op de link die ernaast staat. Er
     </td>
   </tr>
 </table>
-</section></article><script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script><script src="/js/script.min.71b9c6032efa376470c2fc475362fd9e54114fccc8a865534802332b07ed11a9.js" integrity="sha256-cbnGAy76N2RwwvxHU2L9nlQRT8zIqGVTSAIzKwftEak="></script></body>
+</section></article><script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script src="/js/script.min.71b9c6032efa376470c2fc475362fd9e54114fccc8a865534802332b07ed11a9.js" integrity="sha256-cbnGAy76N2RwwvxHU2L9nlQRT8zIqGVTSAIzKwftEak="></script>
+</body>
 </html>
