--- a/peuters-natuurlijk/index.html
+++ b/peuters-natuurlijk/index.html
@@ -68,35 +68,55 @@ mail: <a href="mailto:info@stichtingvoelspriet.nl">info@stichtingvoelspriet.nl</
 	<header style="background-image: url(https://res.cloudinary.com/stichtingvoelspriet/image/upload/v1541276841/peuters-natuurlijk/vergrootglas.jpg)"><div class="slant"></div>&nbsp;<div class="title" id="wanneer">
 			<span>Wanneer?</span>
 		</div>
-	</header><section><p>Zoem en Zomer starten met een heerlijk nieuw seizoen op <strong>woensdag 1 april</strong>. Altijd van 10 tot 11 op de Koppelsteede.<br>
-Aanmelden voor de workshops kan door te klikken op de link die ernaast staat. Er kunnen maximaal 10 peuters per workshops meedoen.</p>
+	</header><section><p>Zoem en Zomer starten met een heerlijk nieuw seizoen op <strong>woensdag 9 september</strong>. Altijd van 10 tot 11 op de Koppelsteede.<br>
+Aanmelden voor de workshops kan via Facebook door te klikken op de link die ernaast staat.
+Geen facebook? Mail dan naar <a href="mailto:patricia@stichtingvoelspriet.nl">patricia@stichtingvoelspriet.nl</a>.
+Er kunnen maximaal 10 peuters per workshops meedoen.</p>
 <p><div class="rsvp">
-  <span class="rsvp-name">Wakker worden!</span>
-  <span class="rsvp-date">woe 1 april</span>
-  <a href="http://eepurl.com/gjSux1" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
-</div><br>
+  <span class="rsvp-name">De regenboog in Geuren en Kleuren</span>
+  <span class="rsvp-date">woe 9 september</span>
+  <a href="https://www.facebook.com/events/277947636830184/" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
+</div>
 <div class="rsvp">
-  <span class="rsvp-name">Wij gaan op berenjacht</span>
-  <span class="rsvp-date">woe 8 april</span>
-  <a href="http://eepurl.com/gjSF3j" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
-</div><br>
+  <span class="rsvp-name">Vriendjes toveren!</span>
+  <span class="rsvp-date">woe 16 september</span>
+  <a href="https://www.facebook.com/events/344753719883531/" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
+</div>
 <div class="rsvp">
-  <span class="rsvp-name">Voelsprieten uit!</span>
-  <span class="rsvp-date">woe 15 april</span>
-  <a href="http://eepurl.com/gjSJVT" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
-</div><br>
+  <span class="rsvp-name">Elfenbankjes en Kabouterhuisjes</span>
+  <span class="rsvp-date">woe 23 september</span>
+  <a href="https://www.facebook.com/events/363270151324651/" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
+</div>
 <div class="rsvp">
-  <span class="rsvp-name">De bosdokter</span>
-  <span class="rsvp-date">woe 22 april</span>
-  <a href="http://eepurl.com/djSczD" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
+  <span class="rsvp-name">Wie is de kampioen van het bos?</span>
+  <span class="rsvp-date">woe 30 september</span>
+  <a href="https://www.facebook.com/events/1245190912482716/" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
+</div>
+<div class="rsvp">
+  <span class="rsvp-name">Wilde dierendag</span>
+  <span class="rsvp-date">woe 7 oktober</span>
+  <a href="https://www.facebook.com/events/1625947370914121/" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
+</div>
+<div class="rsvp">
+  <span class="rsvp-name">Huis van muis</span>
+  <span class="rsvp-date">woe 14 oktober</span>
+  <a href="https://www.facebook.com/events/212708166735667/" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
+</div>
+<div class="rsvp">
+  <span class="rsvp-name">Elsa eekhoorn en de hoge boom</span>
+  <span class="rsvp-date">woe 28 oktober</span>
+  <a href="https://www.facebook.com/events/579867092891033/" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
+</div>
+<div class="rsvp">
+  <span class="rsvp-name">Winterzzzlaap</span>
+  <span class="rsvp-date">woe 4 november</span>
+  <a href="https://www.facebook.com/events/819896098756290/" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
 </div></p>
-<p>Op de Koppelsteede werken wij samen met KookKunst&amp;Koffie. KookKunst&amp;Koffie maakt zes dagen in de week de lekkerste koffie, thee, gebakjes, kleine lunch en ander lekkers. Zie voor meer informatie​ <a href="http://www.kookkunstkoffie.nl/">http://www.kookkunstkoffie.nl/</a></p>
-<p>Onze deelnemers krijgen na afloop van de workshop een PeutersNatuurlijk-munt waarmee tegen gereduceerd tarief bij KookKunst&amp;Koffie iets te drinken kan worden gekocht. Door deze samenwerking hebben wij op locatie de Koppelsteede een relatief laag tarief.</p>
 <ul>
-<li>Een cursus van vier workshops kost € 22.</li>
-<li>Een losse workshop kost € 6,50.</li>
+<li>Een cursus van vier workshops kost € 26.</li>
+<li>Een losse workshop kost € 7,50.</li>
 </ul>
-<p>De kosten zijn voor een peuter en een begeleider samen. Graag vooraf contant betalen.</p>
+<p>De kosten zijn voor een peuter en een begeleider samen en zijn inclusief een kleine fruitpicknick. Graag vooraf betalen.</p>
 <p>Dus… is jouw peuter een boswachter in de dop en willen jullie mee zingen, springen en door de plassen stampen: Hou deze website of onze <a href="https://www.facebook.com/stichtingvoelspriet">Facebookpagina</a> in de gaten! Zeker weten dat je niets mist? Meld je aan voor onze <a href="http://eepurl.com/c2cvsv">nieuwsbrief</a> of stuur een mailtje naar <a href="mailto:info@stichtingvoelspriet.nl">info@stichtingvoelspriet.nl</a>.</p>
 </section></article><article class="grey-1-pane">
 	<header style="background-image: url(https://res.cloudinary.com/stichtingvoelspriet/image/upload/v1541276841/peuters-natuurlijk/IMG_02181.jpg)"><div class="slant"></div>&nbsp;<div class="title" id="referenties">
