Workshop 9 september 2020 geannuleerd

--- a/peuters-natuurlijk/index.html
+++ b/peuters-natuurlijk/index.html
@@ -68,16 +68,12 @@ mail: <a href="mailto:info@stichtingvoelspriet.nl">info@stichtingvoelspriet.nl</
 	<header style="background-image: url(https://res.cloudinary.com/stichtingvoelspriet/image/upload/v1541276841/peuters-natuurlijk/vergrootglas.jpg)"><div class="slant"></div>&nbsp;<div class="title" id="wanneer">
 			<span>Wanneer?</span>
 		</div>
-	</header><section><p>Zoem en Zomer starten met een heerlijk nieuw seizoen op <strong>woensdag 9 september</strong>. Altijd van 10 tot 11 op de Koppelsteede.<br>
+	</header><section><p>Zoem en Zomer starten met een heerlijk nieuw seizoen op <strong>woensdag 16 september</strong>. Altijd van 10 tot 11 op de Koppelsteede.<br>
 Aanmelden voor de workshops kan via Facebook door te klikken op de link die ernaast staat.
 Geen facebook? Mail dan naar <a href="mailto:patricia@stichtingvoelspriet.nl">patricia@stichtingvoelspriet.nl</a>.
 Er kunnen maximaal 10 peuters per workshops meedoen.</p>
+<p><strong><em>Let op:</em> De workshop &ldquo;De regenboog in Geuren en Kleuren&rdquo; van woensdag 9 september is geannuleerd.</strong></p>
 <p><div class="rsvp">
-  <span class="rsvp-name">De regenboog in Geuren en Kleuren</span>
-  <span class="rsvp-date">woe 9 september</span>
-  <a href="https://www.facebook.com/events/277947636830184/" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
-</div>
-<div class="rsvp">
   <span class="rsvp-name">Vriendjes toveren!</span>
   <span class="rsvp-date">woe 16 september</span>
   <a href="https://www.facebook.com/events/344753719883531/" title="aanmelden" target="_blank" rel="noopener"><i class="fas fa-edit"></i></a>
@@ -116,7 +112,7 @@ Er kunnen maximaal 10 peuters per workshops meedoen.</p>
 <li>Een cursus van vier workshops kost € 26.</li>
 <li>Een losse workshop kost € 7,50.</li>
 </ul>
-<p>De kosten zijn voor een peuter en een begeleider samen en zijn inclusief een kleine fruitpicknick. Graag vooraf betalen.</p>
+<p>De kosten zijn voor een peuter en een begeleider samen. Graag vooraf betalen.</p>
 <p>Dus… is jouw peuter een boswachter in de dop en willen jullie mee zingen, springen en door de plassen stampen: Hou deze website of onze <a href="https://www.facebook.com/stichtingvoelspriet">Facebookpagina</a> in de gaten! Zeker weten dat je niets mist? Meld je aan voor onze <a href="http://eepurl.com/c2cvsv">nieuwsbrief</a> of stuur een mailtje naar <a href="mailto:info@stichtingvoelspriet.nl">info@stichtingvoelspriet.nl</a>.</p>
 </section></article><article class="grey-1-pane">
 	<header style="background-image: url(https://res.cloudinary.com/stichtingvoelspriet/image/upload/v1541276841/peuters-natuurlijk/IMG_02181.jpg)"><div class="slant"></div>&nbsp;<div class="title" id="referenties">
